added ai-search using Gemini. Important - to the .env file add the gemini api key, otherwise might not work. Also updated RecipeDTO, another DTO updated it supposed to come out
